--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-responsive": "^10.0.1",
+    "react-router-dom": "^7.13.0",
     "tailwindcss": "^4.1.18",
     "zustand": "^5.0.11"
   },
